--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Gallery</h1>
-    <div class="cards">
-       
+    <div class="container">
+        <div class="cards">
+            
+        </div>
     </div>
 </body>
 </html>
